--- a/translations/en.json
+++ b/translations/en.json
@@ -2,5 +2,6 @@
   "app": {
     "description":  "Make a field mandatory",
     "name":         "Required Field"
-  }
+  },
+  "error_message": "Please, fill in the following field"
 }
