--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,11 @@
 {
   "app": {
     "description":  "Make a field mandatory",
-    "name":         "Required Field"
+    "name":         "Required Field",
+    "parameters": {
+      "required_fiels": "Required Fields",
+      "helpText": "List of ticket fields separated by commas. Example: status,custom_field_1234567"
+    }
   },
-  "error_message": "Please, fill in the following field"
+  "error_message": "The following fields cannot be empty"
 }
