Add whitelist for required/hidden/readonly fields via tags/orgs/groups

--- a/translations/en.json
+++ b/translations/en.json
@@ -7,13 +7,49 @@
         "label":"Required Fields",
         "helpText": "List of required ticket fields separated by commas. Example: status,custom_field_1234567"
       },
+      "required_fields_whitelist_tags":{
+        "label": "Required Fields whitelist tags",
+        "helpText": "List of tags separated by commas. Example: admin,super_agent"
+      },
+      "required_fields_whitelist_group_ids":{
+        "label": "Required Fields whitelist groups",
+        "helpText": "List of group ids separated by commas. Example: 231231321,34345456"
+      },
+      "required_fields_whitelist_organization_ids":{
+        "label": "Required Fields whitelist organizations",
+        "helpText": "List of organization ids separated by commas. Example: 231231321,34345456"
+      },
       "hidden_fields": {
         "label":"Hidden Fields",
         "helpText": "List of hidden ticket fields separated by commas. Example: status,custom_field_1234567"
       },
+      "hidden_fields_whitelist_tags":{
+        "label": "Hidden Fields whitelist tags",
+        "helpText": "List of tags separated by commas. Example: admin,super_agent"
+      },
+      "hidden_fields_whitelist_group_ids":{
+        "label": "Hidden Fields whitelist groups",
+        "helpText": "List of group ids separated by commas. Example: 231231321,34345456"
+      },
+      "hidden_fields_whitelist_organization_ids":{
+        "label": "Hidden Fields whitelist organizations",
+        "helpText": "List of organization ids separated by commas. Example: 231231321,34345456"
+      },
       "readonly_fields": {
-        "label":"ReadOnly Fields",
+        "label":"Readonly Fields",
         "helpText": "List of read only ticket fields separated by commas. Example: status,custom_field_1234567"
+      },
+      "readonly_fields_whitelist_tags":{
+        "label": "Readonly Fields whitelist tags",
+        "helpText": "List of tags separated by commas. Example: admin,super_agent"
+      },
+      "readonly_fields_whitelist_group_ids":{
+        "label": "Readonly Fields whitelist groups",
+        "helpText": "List of group ids separated by commas. Example: 231231321,34345456"
+      },
+      "readonly_fields_whitelist_organization_ids":{
+        "label": "Readonly Fields whitelist organizations",
+        "helpText": "List of organization ids separated by commas. Example: 231231321,34345456"
       }
     }
   },
